<resources>
    <string name="app_name">HN</string>

    <!-- Common -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Stories -->
    <string name="stories_title">Stories</string>
    <string name="days">d</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>

    <string name="icon_description">Icon for website</string>
    <plurals name="comments_plural">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>

    <plurals name="score_plural">
        <item quantity="one">point</item>
        <item quantity="other">points</item>
    </plurals>

    <string name="stories_network_cached_error">Error retrieving stories due to connection, showing cached stories</string>
    <string name="stories_none_cached_network_error">Error retrieving stories, please check internet connection</string>

    <string name="stories_standard">Standard</string>
    <string name="stories_oldest">Oldest</string>
    <string name="stories_newest">Newest</string>

    <string name="stories_title_top">Top</string>
    <string name="stories_title_ask">Ask</string>
    <string name="stories_title_jobs">Jobs</string>
    <string name="stories_title_new">New</string>
    <string name="stories_title_show">Show</string>

    <!-- Stories Menu -->
    <string name="stories_app_bar_sort">Sort stories</string>
    <string name="stories_content_description_sort">Sort stories</string>

    <!-- Common app bar -->
    <string name="top_app_bar_title">Title</string>

    <!-- Comments -->
    <string name="comments_title">Comments</string>
    <string name="comments_hidden">hidden</string>
    <string name="comments_network_error">Error retrieving comments due to connection, showing cached comments</string>
    <string name="comments_none_cached_network_error">Error retrieving comments, please check internet connection</string>

    <string name="comments_standard">Standard</string>
    <string name="comments_oldest">Oldest</string>
    <string name="comments_newest">Newest</string>

    <!-- Comments Menu -->
    <string name="comments_app_bar_article">Article</string>
    <string name="comments_app_bar_comments">Comments</string>
    <string name="content_description_article">Open article</string>
    <string name="comments_app_bar_share">Share</string>
    <string name="content_description_share">Share</string>
    <string name="comments_app_bar_sort">Sort comments</string>
    <string name="comments_description_sort">Sort comments</string>
    <string name="comments_app_bar_share_article">Share article</string>
    <string name="comments_app_bar_share_comments">Share comments</string>
    <string name="comments_app_bar_share_article_comments">Share article and comments</string>
    <string name="comments_share_article">Article</string>
    <string name="comments_share_comments">Comments</string>
    <!-- Article Viewer -->
    <string name="article_viewer_title">Article Viewer</string>

    <!-- Article Viewer menu -->
    <string name="article_app_bar_comments">Comments</string>
    <string name="content_description_comments">Open comments</string>
    <string name="article_app_bar_default_browser">Open in default browser</string>
    <string name="content_description_default_browser">Open in default browser</string>

    <!-- Drawer menu -->
    <string name="drawer_top_stories">Top Stories</string>
    <string name="drawer_ask_hn">Ask HN</string>
    <string name="drawer_job_stories">Job Stories</string>
    <string name="drawer_new_stories">New Stories</string>
    <string name="drawer_show_hn">Show HN</string>
    <string name="drawer_saved_stories">Saved Offline Stories</string>
    <string name="drawer_followed_users">Followed Users</string>
    <string name="drawer_search_users">User Lookup</string>
    <string name="drawer_search_stories">Search Stories</string>

    <!-- Storage -->
    <string name="saved_theme">theme</string>

</resources>
