<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/openArticle"
        android:contentDescription="@string/content_description_article"
        android:icon="@drawable/ic_article_24"
        android:title="@string/comments_app_bar_article"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:contentDescription="@string/comments_description_sort"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/comments_app_bar_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:contentDescription="@string/content_description_share"
        android:icon="@drawable/ic_share_24"
        android:title="@string/comments_app_bar_share"
        app:showAsAction="ifRoom" />

</menu>
