<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/storyListFragment">

    <fragment
        android:id="@+id/storyListFragment"
        android:name="com.jamie.hn.stories.ui.StoryListFragment"
        android:label="@string/stories_title"
        tools:layout="@layout/story_list_fragment">
        <action
            android:id="@+id/action_storiesList_to_commentsList"
            app:destination="@id/commentsListFragment">
            <argument
                android:name="storyId"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_storiesList_to_articleViewer"
            app:destination="@id/articleViewerFragment">
            <argument
                android:name="url"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/commentsListFragment"
        android:name="com.jamie.hn.comments.ui.CommentsListFragment"
        android:label="@string/comments_title"
        tools:layout="@layout/comment_list_fragment" >

        <action
            android:id="@+id/action_commentsList_to_articleViewer"
            app:destination="@id/articleViewerFragment">
            <argument
                android:name="url"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/articleViewerFragment"
        android:name="com.jamie.hn.articleviewer.ui.ArticleViewerFragment"
        android:label="@string/article_viewer_title"
        tools:layout="@layout/article_viewer_fragment" />

</navigation>
